--- a/home.css
+++ b/home.css
@@ -4,6 +4,7 @@
     background-color: rgb(250, 246, 240);
    
 }
+
 .home p {
     margin: 0;
     text-transform: uppercase;
@@ -76,27 +77,112 @@ font-size: 20px;
     margin-top: 20px;
 }
 
-
-/* phần 1  *//* phần 1  */
-/* phần 1  *//* phần 1  */
-/* phần 1  *//* phần 1  */
-/* phần 1  *//* phần 1  */
-/* phần 1  *//* phần 1  */
-/* phần 1  *//* phần 1  */
-
-
-
-
-
 .table {
     margin-top: 50px;
 }
 .talicenter{
     text-align: center;
+    text-transform: uppercase;
 }
 .taliright{
     text-align: right;
+    text-transform: uppercase;
 }
 .talileft{
     text-align: left;
+    text-transform: uppercase;
+}
+.app-main-chart{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+.chart{
+    /* max-width: 800px; */
+    width: 500px !important;
+    width: 500px !important;
+    margin-right: 100px;
+    border: 1px solid #f9f5f5;
+    background-color: white;
+    box-shadow: 10px 10px 25px 5px #aaaaaa;
+}
+
+.addchart {
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+width: 500px;
+height: 500px;
+background-color: #f4dfdf;
+box-shadow: 10px 10px 25px 5px #aaaaaa;
+}
+.addchart input{
+    margin-bottom: 20px;
+    width: 250px;
+    height: 50px;
+    padding: 0px 5px;
+    border: 1px solid #BFBFBF;
+        background-color: white;
+        box-shadow: 10px 10px 5px #aaaaaa;
+        outline: none;
+        font-size: 18px;
+
+}
+.btn-device{
+    border: 1px solid #BFBFBF;
+        background-color: white;
+        box-shadow: 10px 10px 5px #aaaaaa;
+        font-size: 18px;
+        cursor: pointer;
+        height: 50px;
+        background-color: aqua;
+        width: 250px;
+}
+
+ /* table-log */
+  /* table-log
+   table-log
+        table-log
+                 table-log
+                                table-log
+                                                table-log */
+.table-log{
+margin-left: 20px;
+}
+
+
+.addapp{
+    background-color: black;
+    color: white;
+}
+.addmenu {
+    background-color: black;
+    border-right: 1px solid white;
+}
+.addhome_account{
+    background-color: black;
+}
+.black{
+    background: black;
+    color: white;
+    border: none;
+    outline: none;
+    width: 150px;
+    border: 1px solid white;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+}
+.white{
+    background-color: white;
+    color: black;
+    border: none;
+    outline: none;
+    width: 150px;
+    border: 1px solid black;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+.dff{
+    display: flex;
+
 }
